@@ -1,5 +1,10 @@
 # $Id$
 
+2008-02-18	Konstantin V. Arkhipov
+
+	* core/Cache/WatermarkedPeer.class.php: further collisions prevention:
+	onPHP's version now appends to watermark.
+
 2008-02-17	Konstantin V. Arkhipov
 
 	* main/DAOs/Workers/TransparentDaoWorker.class.php,
